add text in About + modified forecast

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 
 <body>
     <div class="main-content">
+        <p>This site uses some content from mapbox and from weatherstack APIs.</p>
         {{>header}}
         <img class="portrait" src="/img/image.jpg"> 
     </div>
